Criando página principal, de novo pedido e pedidos por cliente

--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,18 @@
 
 body{
   background-color: #FAFAFA;
-  
+  font-family: Open Sans;
+}
+a{
+  text-decoration: none;
+}
+
+button{
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+#root, body, html{
+  height: 100%;
 }
